plugins {
  id 'com.android.application'
}

android {
  namespace "com.neoex.materialcalendarview.sample"

  compileSdk rootProject.ext.sdkVersion
  
  defaultConfig {
    applicationId "com.neoex.materialcalendarview.sample"

    minSdkVersion rootProject.ext.minSdkVersion
    targetSdkVersion rootProject.ext.sdkVersion
    versionCode rootProject.ext.versionCode
    versionName rootProject.ext.versionName
  }

  lintOptions {
    abortOnError false
  }

  compileOptions {
    sourceCompatibility JavaVersion.VERSION_17
    targetCompatibility JavaVersion.VERSION_17
  }
}

dependencies {
  implementation project(':library')

  implementation rootProject.ext.appCompat
  implementation rootProject.ext.recyclerviewV7
  implementation rootProject.ext.butterknife

  annotationProcessor rootProject.ext.butterknifeCompiler
}

tasks.withType(JavaCompile).configureEach{
  options.fork = true
  options.forkOptions.jvmArgs +=[
          '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
          '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
          '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
}